app/src/components/landing-screen/landing-screen.scss
@import '../../utilities/sass/sass-variables.scss';
@import '../../utilities/sass/shared.scss';

.landing-section {
    height: 100vh;
    display: flex;
    flex-direction: column;
    // background: 
    // linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
    // url(../../assets//images/home-page-background.jpg) bottom center no-repeat;
    background-size: cover;
    .landing-flex {
        height: calc(100vh - 250px);
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        .landing-text {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: #ffffff;
            font-size: 18px;
            text-align: center;
            @include md {
                font-size: 36px;
            }
            span {
                display: flex;
                color: #00ffff;
            }
            .flex-row {
                display: flex;
                flex-direction: row;
            }
            .about-me-button {
                margin-top: 50px;
                &:hover {
                    cursor: pointer;
                }
                @include md {
                    @include btn__split(#19535F, #0B7A75, #fff);
                }
                .arrow {
                    border: solid #fff;
                    border-width: 0 3px 3px 0;
                    display: inline-block;
                    padding: 4px;
                }
                .right {
                    transform: rotate(-45deg);
                    -webkit-transform: rotate(-45deg);
                }
            }
        }
    }
}

